deploy/yt-rag-app/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: video-rag
  labels:
    app.kubernetes.io/name: yt-rag-app
    app.kubernetes.io/component: api
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: yt-rag-app
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
