deploy/yt-rag-app/chat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: video-rag
  labels:
    app.kubernetes.io/name: yt-rag-app
    app.kubernetes.io/component: chat
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: yt-rag-app
    app.kubernetes.io/component: chat
  ports:
    - name: http
      port: 80
      targetPort: http
